--- a/Languages/English/DefInjected/DamageDef/Damages_RangedWeapon.xml
+++ b/Languages/English/DefInjected/DamageDef/Damages_RangedWeapon.xml
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <RangedHack.label>hack</RangedHack.label>
-  <RangedHack.deathMessage>{0} has been hacked to death.</RangedHack.deathMessage>
-
+  <!--<RangedHack.label>hack</RangedHack.label>-->
+  <!--<RangedHack.deathMessage>{0} has been hacked to death.</RangedHack.deathMessage>-->
 
 </LanguageData>
