--- a/Languages/English/DefInjected/JobDef/Jobs_Joy.xml
+++ b/Languages/English/DefInjected/JobDef/Jobs_Joy.xml
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <Wrestle.reportString>wrestling.</Wrestle.reportString>
-
+  <!--<Wrestle.reportString>wrestling.</Wrestle.reportString>-->
 
 </LanguageData>
