--- a/Languages/English/DefInjected/ThingDef/Buildings_Joy.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Joy.xml
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <FightingRing.label>fighting ring</FightingRing.label>
-  <FightingRing.description>A raised platform of packed mud marked by a circle. Used for practicing martial skills and for contests of strength.</FightingRing.description>
-
+  <!--<FightingRing.label>fighting ring</FightingRing.label>-->
+  <!--<FightingRing.description>A raised platform of packed mud marked by a circle. Used for practicing martial skills and for contests of strength.</FightingRing.description>-->
 
 </LanguageData>
