--- a/Languages/English/DefInjected/TraderKindDef/TraderKinds_Visitor_Orc.xml
+++ b/Languages/English/DefInjected/TraderKindDef/TraderKinds_Visitor_Orc.xml
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <Visitor_Orc_Standard.label>orc scrounger</Visitor_Orc_Standard.label>
-
+  <!--<Visitor_Orc_Standard.label>orc scrounger</Visitor_Orc_Standard.label>-->
 
 </LanguageData>
