--- a/Languages/English/DefInjected/FactionDef/Factions_Orc_Player.XML
+++ b/Languages/English/DefInjected/FactionDef/Factions_Orc_Player.XML
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <OrcPlayerTribe.label>Orc Clan</OrcPlayerTribe.label>
-  <OrcPlayerTribe.description>Your fledging empire.</OrcPlayerTribe.description>
-  <OrcPlayerTribe.pawnsPlural>orcs</OrcPlayerTribe.pawnsPlural>
-
+  <!--<OrcPlayerTribe.label>Orc Clan</OrcPlayerTribe.label>-->
+  <!--<OrcPlayerTribe.description>Your fledging empire.</OrcPlayerTribe.description>-->
+  <!--<OrcPlayerTribe.pawnsPlural>orcs</OrcPlayerTribe.pawnsPlural>-->
 
 </LanguageData>
