--- a/Languages/English/DefInjected/RulePackDef/RulePacks_NameMakers_Orc.XML
+++ b/Languages/English/DefInjected/RulePackDef/RulePacks_NameMakers_Orc.XML
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <NamerPersonOrc.rulePack.rulesStrings.0>name->[maleorc] [orcsurname]</NamerPersonOrc.rulePack.rulesStrings.0>
-  <NamerPersonOrc.rulePack.rulesStrings.1>name->[femaleorc] [orcsurname]</NamerPersonOrc.rulePack.rulesStrings.1>
-
+  <!--<NamerPersonOrc.rulePack.rulesStrings.0>name->[maleorc] [orcsurname]</NamerPersonOrc.rulePack.rulesStrings.0>-->
+  <!--<NamerPersonOrc.rulePack.rulesStrings.1>name->[femaleorc] [orcsurname]</NamerPersonOrc.rulePack.rulesStrings.1>-->
 
 </LanguageData>
