--- a/Languages/English/DefInjected/ThingDef/Buildings_Misc.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Misc.xml
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <Stake.label>stake</Stake.label>
-  <Stake.description>A stake for the heads of your enemies, a grizzly reminder of your tribes achievements.</Stake.description>
-
+  <!--<Stake.label>stake</Stake.label>-->
+  <!--<Stake.description>A stake for the heads of your enemies, a grizzly reminder of your tribes achievements.</Stake.description>-->
 
 </LanguageData>
