--- a/Languages/English/DefInjected/TraderKindDef/TraderKinds_Caravan_Orc.xml
+++ b/Languages/English/DefInjected/TraderKindDef/TraderKinds_Caravan_Orc.xml
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <Caravan_Orc_Slaver.label>slaver</Caravan_Orc_Slaver.label>
-
+  <!--<Caravan_Orc_Slaver.label>slaver</Caravan_Orc_Slaver.label>-->
 
 </LanguageData>
