--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FilthyOrcInvasion
 
+1.3.1 - Orcs should now use the correct hair (bald)
+
+
 1.0.12.0 - CE-patch is now included in the main CE-mod instead
 
 
