--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FilthyOrcInvasion
 
+1.3.2 - Fixed the Hair and Beard issues
+
+
 1.3.1 - Orcs should now use the correct hair (bald)
 
 
