--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FilthyOrcInvasion
 
+1.3.3 - More unique defname for the HugLib-news base-definition, to avoid conflicts with other mods.
+
+
 1.3.2 - Fixed the Hair and Beard issues
 
 
