--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FilthyOrcInvasion
 
+1.3.4 - If [url=https://steamcommunity.com/sharedfiles/filedetails/?id=2553700067]Medieval Overhaul[/url] is loaded, helmets will use their basic component in the recipe
+
+
 1.3.3 - More unique defname for the HugLib-news base-definition, to avoid conflicts with other mods.
 
 
