--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FilthyOrcInvasion
 
+1.4.4 - Last update, added end-of-life message
+
+
 1.4.3 - Race-restrictions fixed. Thanks greensniperhat
 
 
